# thesis

./: .dockerignore  .env.docker  .env.example  .gitattributes  .gitignore  .graphifyignore  AI_JUDGE_EVALUATION_2026_04_06.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  reranker.ipynb  tmp_run_report.py
data/hf_cache/: .gitkeep
docker/: entrypoint.sh
docs/: AI_JUDGE_PROMPT.md  RUNNING_SERVICES.md
docs/ablation/: RESULTS.md
docs/audits/: AUDIT-2026-04-17-171000.md  AUDIT-2026-04-17.md  AUDIT-2026-04-22.md  AUDIT-2026-05-03.md  AUDIT-2026-05-06.md
docs/changelogs/: CHANGELOG-v0.1.0.md  CHANGELOG-v1.0.1.md  CHANGELOG-v1.0.2.md  CHANGELOG-v1.1.0.md  CHANGELOG-v1.1.1.md  CHANGELOG-v1.3.0.md  CHANGELOG-v1.4.0.md
docs/completed/: part-6-graph.md  part-8-generation.md  part-9-evaluation.md  python-cleanup-audit.md  python-cleanup-progress.md
docs/draft/: ABLATION.md  ADR.md  DATASET.md  PROMPTS.md  REQUIREMENTS.md  SPECS.md  TEST_PLAN.md
docs/images/: component_diagrams.md  thesis_figures.tex
docs/implementation/: 00-overview.md  TASK.md
docs/overleaf/: bibliography.bib  thesis.tex
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
notebooks/: 00_interactive_demo.ipynb  README.md  RESULTS_02.md  exploration.ipynb  kg_preview.html
notebooks/ablation/: ABLATION_TASK_LIST.md  task_list.md
notebooks/ablation_results/: ablation_state.json
notebooks/e2e/: 01_builder_graph_e2e.ipynb  02_full_pipeline_e2e.ipynb
notebooks/e2e-tests/: 01_builder_graph_e2e.ipynb  02_full_pipeline_e2e.ipynb
notebooks/part-1-infrastructure/: 01-infrastructure.ipynb
notebooks/part-2-models-prompts/: 02-models-prompts.ipynb
notebooks/part-3-ingestion/: 03-ingestion.ipynb
notebooks/part-4-extraction-er/: 04-extraction-er.ipynb
notebooks/part-5-mapping/: 05-mapping.ipynb
notebooks/part-6-graph/: 06-graph.ipynb
notebooks/part-7-retrieval/: 07-retrieval.ipynb
notebooks/part-9-evaluation/: 09-evaluation.ipynb
notebooks/results/: RESULTS.md  RESULTS_02.md
outputs/ablation/: RESULTS_REPORT.md  all_scores_full.json
scripts/: analyze_ab00_trace.py  export_mermaid_png.py  generate_ablation_report.py  generate_architecture_diagrams.py  inject_ablation_context.py  manual_analysis.py  monitor_runs.py  neo4j_lifecycle.py  pipeline_run.py  run_ab00.py  run_ab00_debug.py  run_ab00_lazy.py  run_ab00_logged.py  run_ablation_full.py  run_ablation_suite.py  run_ai_judge.py  run_all_ablations.py  run_judge_all.sh  run_overnight_ablations.py  run_pipeline.py  serve_api.py  test_api_features.py
src/: __init__.py
src/api/: __init__.py  ablation_router.py  app.py  auth.py  demo_router.py  jobs.py  models.py
src/config/: __init__.py  config.py  llm_client.py  llm_factory.py  logging.py  model_builders.py  provider_detection.py  settings.py  tracing.py
src/data/: few_shot_cypher.json
src/evaluation/: __init__.py  ablation_runner.py  bundle_writer.py  custom_metrics.py  gold_standard_loader.py  ragas_runner.py  thesis_export.py
src/extraction/: __init__.py  heuristic_extractor.py  triplet_extractor.py
src/generation/: __init__.py  answer_generator.py  context_distiller.py  hallucination_grader.py  lazy_expander.py  query_graph.py  routing.py
src/graph/: __init__.py  build_nodes.py  builder_graph.py  conversation_registry.py  cypher_builder.py  cypher_generator.py  cypher_healer.py  kg_registry.py  neo4j_client.py  validation_nodes.py
src/ingestion/: __init__.py  ddl_parser.py  file_registry.py  pdf_loader.py  schema_enricher.py
src/mapping/: __init__.py  hitl.py  rag_mapper.py  validator.py
src/models/: __init__.py  schemas.py  state.py
src/prompts/: __init__.py  few_shot.py  templates.py
src/resolution/: __init__.py  blocking.py  entity_resolver.py  llm_judge.py
src/retrieval/: __init__.py  bm25_retriever.py  embeddings.py  hybrid_retriever.py  node_utils.py  reranker.py
src/utils/: __init__.py  json_utils.py  query_utils.py  text_utils.py
tests/: conftest.py
tests/evaluation/: test_ablation.py  test_ragas.py
tests/fixtures/: few_shot_examples.json  gold_standard.json
tests/integration/: test_api_endpoints.py  test_builder_graph.py  test_cypher_healing.py  test_incremental_update.py  test_pdf_loader_integration.py  test_query_graph.py  test_settings_override.py
tests/unit/: __init__.py  test_answer_generator.py  test_auth.py  test_bm25_retriever.py  test_builder_graph.py  test_conversation_registry.py  test_cypher_builder.py  test_cypher_generator.py  test_cypher_healer.py  test_ddl_parser.py  test_entity_resolver.py  test_file_registry.py  test_hallucination_grader.py  test_heuristic_extractor.py  test_hitl.py  test_hybrid_retriever.py  test_jobs.py  test_kg_registry.py  test_lazy_expander.py  test_llm_client.py  test_llm_factory.py  test_mapping_retrieval.py  test_neo4j_client.py  test_node_utils.py  test_pdf_loader.py  test_prompts.py  (+11 more)
(+1170 files in other folders)
