[project]
name = "thesis"
version = "1.1.1"
description = "Multi-Agent Framework for Semantic Discovery & GraphRAG"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Marc'Antonio Lopez" }]

dependencies = [
    "langgraph>=0.2,<2.0",
    "langchain>=0.3,<1.0",
    "langchain-openrouter>=0.1,<1.0",
    "langchain-community>=0.3,<1.0",
    "neo4j>=5.0,<6.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "sentence-transformers>=3.0,<4.0",
    "FlagEmbedding>=1.2,<2.0",
    "transformers>=4.40,<5.0",
    "langchain-opendataloader-pdf>=2.0,<3.0",
    "sqlglot>=25.0,<26.0",
    "ragas>=0.2,<1.0",
    "rank-bm25>=0.2,<1.0",
    "httpx>=0.27,<1.0",
    "python-json-logger>=2.0,<3.0",
    "tiktoken>=0.7,<1.0",
    "scikit-learn>=1.4,<2.0",
    "faiss-cpu>=1.8,<2.0",
    "tenacity>=8.0,<9.0",
    "spacy>=3.7,<4.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "pandas>=2.1,<3.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "langgraph-checkpoint-sqlite>=2.0,<3.0",
    "langchain-anthropic>=0.2,<1.0",
    "langchain-ollama>=0.1,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "testcontainers[neo4j]>=4.7",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.32",
]

[project.scripts]
ragas-eval = "src.evaluation.ragas_runner:main"
pipeline-run = "scripts.run_pipeline:main"
ablation-run = "scripts.run_pipeline:main"
ai-judge = "scripts.run_ai_judge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "E501"]  # E402: dotenv first, E501: borderline line length
"src/prompts/templates.py" = ["E501"]  # Line too long (prompt strings can be long)
"src/config/llm_client.py" = ["TC002"]  # Imports used for runtime type checking

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services (Neo4j)",
    "slow: marks tests that take > 10s",
]
